--- a/Net5Crud.Clientes/Views/Login/Login.cshtml
+++ b/Net5Crud.Clientes/Views/Login/Login.cshtml
@@ -1,8 +1,8 @@
 ﻿@model  Net5Crud.Clientes.Models.ClsUsuario
 @{
-   ViewData["Title"] = "Acceso";
+   ViewData["Title"] = "Acceso Alumno";
 }
-<h4>Acceso al Sistema</h4>
+<h4>Acceso Alumno</h4>
 <hr />
  
  <div class="row">
